argocd_k8S_config/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: d1l1th1um-deployment-frontend
        namespace: d1l1th1um
spec:
        replicas: 2
        selector:
                matchLabels:
                        app: d1l1th1um
        template:
                metadata:
                        labels:
                                app: d1l1th1um
                spec:
                        containers:
                        - name: frontend
                          imagePullPolicy: Always
                          image: upi05/frontend
                          ports:
                          - containerPort: 80
