argocd_k8S_config/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
        name: d1l1th1um-clusterip
        namespace: d1l1th1um
spec:
        selector:
                app: d1l1th1um
        ports:
                - protocol: TCP
                  name: apiserver
                  port: 3000
                  targetPort: 3000
                - protocol: TCP
                  name: frontend
                  port: 80
                  targetPort: 80
        type: ClusterIP
