argocd_k8S_config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: d1l1th1um-ingress 
  namespace: d1l1th1um
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "d1l1th1um.click"
    secretName: d1l1th1um-cert
  - hosts:
    - "api.d1l1th1um.click"
    secretName: d1l1th1um-api-cert
  rules:
  - host: "d1l1th1um.click"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: d1l1th1um-clusterip 
            port:
              number: 80
  - host: "api.d1l1th1um.click"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: d1l1th1um-clusterip 
            port:
              number: 3000
